--- a/README
+++ b/README
@@ -1,7 +1,14 @@
 Webkit Terminal
 
-Plan:
-1. almost terminal emulator: just pipes, no pty window size properties
-2. terminal emulator
-3. output format recognition: when output is like BM....{binary data}, draw that image
-4. custom esc sequences
+That will be a full xterm-like terminal emulator (but with features cut and compatibility reduced).
+Using webkit will allow to create special escape sequences which will allow to add graphical features (inline image viewing. cat image.jpg will show image in console. may be, graphical_ls will work like ls but with file icons. etc)
+
+Current todo:
+1. more esc sequences support (js)
+	http://invisible-island.net/xterm/ctlseqs/ctlseqs.html#VT100%20Mode
+	http://euc.jp/i18n/ctlseqs.txt
+	http://www.mit.edu/afs/athena/system/x11r4/src/mit/clients/xterm/ctlseq2.txt
+	http://sunsite.ualberta.ca/Documentation/Gnu/screen-3.9.4/html_chapter/screen_11.html
+2. cursor. now there's no cursor at all (js)
+3. input handling. backspace, alt, control, delete, keys etc (js or maybe c)
+	http://sunsite.ualberta.ca/Documentation/Gnu/screen-3.9.4/html_chapter/screen_11.html#SEC60
